kubernetes/apps/paperless-drali/gotenberg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: paperless-drali
spec:
  selector:
    app: gotenberg
  ports:
    - port: 3000
