kubernetes/apps/paperless-drali/gotenberg/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gotenberg
  namespace: paperless-drali
spec:
  podSelector:
    matchLabels:
      app: gotenberg
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: paperless
      ports:
        - port: 3000
